--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.AboutMeContainer {
   display: flex;
+  flex-wrap: wrap;
+  max-height: 100vh;
   flex-direction: column;
+  margin: 10px;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.AboutMeContainer a:link,
+a:visited {
+  text-decoration: none;
+  color: black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.AboutImage {
+  width: 30%;
+  margin-bottom: 30px;
+  margin-top: 75px;
+}
+
+.AboutHeader {
+  text-shadow: 3px 3px 0 rgba(0, 0, 0, 0.1);
+}
+
+.AboutBio {
+  margin-top: 10vh;
+  width: 800px;
+}
+
+.HomeImage {
+  display: block;
+  margin-top: 70px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
+}
+
+.News {
+  width: 70%;
+  max-height: 80vh;
+  margin-left: auto;
+  margin-right: auto;
+  overflow-y: scroll;
 }
