--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@ a:visited {
 .HomeImage {
   display: block;
   margin-top: 70px;
+  margin-bottom: 30px;
   margin-left: auto;
   margin-right: auto;
   width: 70%;
@@ -43,4 +44,28 @@ a:visited {
   margin-left: auto;
   margin-right: auto;
   overflow-y: scroll;
+}
+
+.headshot {
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 75px;
+  margin-bottom: 30px;
+  width: 70%;
+}
+
+.WSScar {
+  display: grid;
+  grid-template-columns: 30% 30% 30%;
+  margin-left: 9%;
+}
+
+.WSSpic {
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  width: 90%;
 }
